# subhkl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  integration.yaml
docs/source/: conf.py
src/subhkl/_optimization/: __init__.py  _calibrate.py  _helpers.py  _jax_minimize.py  _objective.py  _scipy_minimize.py  _types.py  calibrate.py  findub.py  legacy.py  minimize.py  objective.py  optimization.py  solver.py
src/subhkl/_optimization/indexers/: __init__.py  _binary.py  _cosine.py  _sinkhorn.py  _soft.py  _utils.py  sinkhorn.py
src/subhkl/core/: __init__.py  crystallography.py  experiment.py  math.py  models.py  spacegroup.py
src/subhkl/instrument/: goniometer.py  metrics.py
src/subhkl/integration/: api.py  image_data.py  orchestrator.py
src/subhkl/io/: loader.py  parser.py
src/subhkl/peakfinder/: sparse_rbf.py
tests/: README.md  test_bootstrap_refinement.py  test_cosine_argument_crash.py  test_cosine_loss_instability.py  test_cosine_score_unit.py  test_exploader_offset_vulnerability.py  test_forbidden_reflections_bug.py  test_integration.py  test_multi_run_geometry_compression_bug.py  test_multi_run_gonio_mapping.py  test_multi_run_indexing.py  test_multi_run_indexing_vulnerability.py  test_multi_run_peaks_handling.py  test_multi_run_rotation_bug.py  test_multi_run_scaling_bug.py  test_optimization.py  test_rotating_sample_offset.py  test_score_sign_consistency.py  test_sinkhorn_resolution_wall.py  test_sinkhorn_symmetry_ignorance.py  test_sinkhorn_vanishing_gradient.py
