[project]
name = "subhkl"
description = "Solving crystal orientation from Laue images"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.11.0",
    "matplotlib>=3.8.4",
    "scikit-image>=0.23.2",
    "typer>=0.12.3",
    "opencv-python>=4.11.0",
    "gemmi>=0.7.3",
    "tqdm>=4.67.3",
    "evosax"
]
license = { text = "GPL3.0" }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
  "ruff>=0.2.0",
  "pytest>=8.0.2,<8.1.0",
  "pytest-cov>=4.1.0,<4.2.0",
  "pytest-dependency>=0.6.1"
]

# JAX CPU-only (default JAX installation)
cpu = [
  "jax[cpu]",
]
# JAX with CUDA 12 support (NVIDIA GPUs)
cuda12 = [
  "jax[cuda12]",
]
# JAX with CUDA 11 support (older NVIDIA GPUs)
cuda11 = [
  "jax[cuda11]",
]
# JAX with ROCm support (AMD GPUs)
rocm = [
  "jax[rocm]",
]

[tool.pylint]
max-line-length = 80
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]
extension-pkg-whitelist = ["PyQt5"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff.lint]
ignore = ["E741"]
select = ["E", "F", "I", "PL"]
